configuring UserDetailsService and endpoints